--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Feature tests for Firefox Focus Android app.",
   "scripts": {
+    "serve":"appium",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Antonio Noca",
